Refactor of CaebatModel and IPS Readers and Writers to implement the IReader/IWriter interfaces.